# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.124 $ $Date: 2009-01-24 22:46:10 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-01-24  Christian Heller  <christian.heller@tuxtax.de>
        * Prepare "project plan" web page for coming 0.9.0 release
        * Search and fix "Bus error" bug appearing since the autoconf/ make files were adapted to 64 Bit architecture:
            the reason was that "INTEGER_ARRAY_MEMORY_ABSTRACTION" instead of "POINTER_ARRAY_MEMORY_ABSTRACTION"
            was handed over to function calls of "get_array_elements" of file "compound_handler.c"

2009-01-23  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt file "configure.ac" to using 64 Bit compilation mode and "x86_64" architecture
        * Remove "libxml" dependency from files "configure.ac" and "src/controller/Makefile.am"
        * Fix bug in xml parsing files where "POINTER_PRIMITIVE_SIZE" was used instead of "WIDE_CHARACTER_PRIMITIVE_SIZE"
            (this bug became obvious because the 32-bit environment set int, long and pointer to 32 bits,
            but the now valid 64-bit environment sets int to 32 bits and long and pointer to 64 bits)
        * Prepare file "NEWS" for coming 0.9.0 release

2009-01-21  Christian Heller  <christian.heller@tuxtax.de>
        * Fix bad bug in all arrays' function "reallocate": the new memory area to be allocated
            was always set, even if the new array size was smaller than the old array count,
            which caused the pointer to the new array to cross the array's boundary