@@ -19,14 +19,14 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: gnu_linux_console_communicator.c,v $ $Revision: 1.25 $ $Date: 2009-01-20 23:46:15 $ $Author: christian $
+ * @version $RCSfile: gnu_linux_console_communicator.c,v $ $Revision: 1.26 $ $Date: 2009-01-25 01:08:44 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
 #ifndef GNU_LINUX_CONSOLE_COMMUNICATOR_SOURCE
 #define GNU_LINUX_CONSOLE_COMMUNICATOR_SOURCE
 
-#include <stdio.h>
+#include <errno.h>
 #include <wchar.h>
 #include "../../constant/abstraction/cybol/text_cybol_abstraction.c"
 #include "../../constant/abstraction/memory/array_memory_abstraction.c"
@@ -42,7 +42,183 @@
 #include "../../memoriser/array.c"
 
 /**
- * Reads the gnu/linux console into a character array.
+ * Reads a gnu/linux console character.
+ *
+ * @param p0 the destination wide character array (Hand over as reference!)
+ * @param p1 the destination count
+ * @param p2 the destination size
+ * @param p3 the loop break flag
+ * @param p4 the input character
+ * @param p5 the escape character mode
+ * @param p6 the escape control sequence mode
+ * @param p7 the source input stream
+ */
+void read_gnu_linux_console_character(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6, void* p7) {
+
+    if (p7 != *NULL_POINTER_MEMORY_MODEL) {
+
+        FILE* s = (FILE*) p7;
+
+        if (p6 != *NULL_POINTER_MEMORY_MODEL) {
+
+            int* csi = (int*) p6;
+
+            if (p5 != *NULL_POINTER_MEMORY_MODEL) {
+
+                int* esc = (int*) p5;
+
+                if (p4 != *NULL_POINTER_MEMORY_MODEL) {
+
+                    wint_t* c = (wint_t*) p4;
+
+                    if (p3 != *NULL_POINTER_MEMORY_MODEL) {
+
+                        int* b = (int*) p3;
+
+                        log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Read gnu/linux console character.");
+
+                        // Initialise error number.
+                        // It is a global variable/ function and other operations
+                        // may have set some value that is not wanted here.
+                        //
+                        // CAUTION! Initialise the error number BEFORE calling
+                        // the function that might cause an error.
+                        errno = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+                        // Read character from source input stream of gnu/linux console.
+                        //
+                        // CAUTION! The multibyte- is converted to a wide character internally,
+                        // so that the return value of type "wint_t" may be casted to "wchar_t".
+                        // Function calls to "decode_utf_8_unicode_character_vector" are therefore NOT necessary here!
+                        *c = fgetwc(s);
+
+                    fwprintf(stdout, L"TEST read gnu/linux console c: %i\n", p4);
+                    fwprintf(stdout, L"TEST read gnu/linux console c: %ls\n", (wchar_t*) p4);
+
+                        if (errno != EILSEQ) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console no error: %i\n", p4);
+
+                            if (*csi == *NUMBER_1_INTEGER_MEMORY_MODEL) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console csi: %i\n", p4);
+
+                                // Reset escape control sequence flag.
+                                *csi = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+                                // Copy source character to destination character array.
+                                append_wide_character_vector(p0, p1, p2, p4, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
+
+                                // Set loop break flag.
+                                // An escape character followed by a left square bracket character
+                                // were read before. So this is an escape control sequence.
+                                // Since all values have been read, the loop can be left now.
+                                *b = *NUMBER_1_INTEGER_MEMORY_MODEL;
+
+                            } else if (*esc == *NUMBER_1_INTEGER_MEMORY_MODEL) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console esc: %i\n", p4);
+
+                                // Reset escape character flag.
+                                *esc = *NUMBER_0_INTEGER_MEMORY_MODEL;
+
+                                // An escape character was read before.
+                                // Find out if it was just that escape character,
+                                // or if a left square bracket character follows now,
+                                // in which case this is the start of an escape control sequence.
+
+                                if (*c == *((wint_t*) LEFT_SQUARE_BRACKET_UNICODE_CHARACTER_CODE_MODEL)) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console esc bracket: %i\n", p4);
+
+                                    // This is the start of an escape control sequence.
+
+                                    // Set escape control sequence flag.
+                                    *csi = *NUMBER_1_INTEGER_MEMORY_MODEL;
+
+                                    // Copy source character to destination character array.
+                                    append_wide_character_vector(p0, p1, p2, p4, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
+
+                                } else {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console unget: %i\n", p4);
+
+                                    // This is NOT going to be an escape control sequence.
+                                    // An escape- followed by another, second character has been detected.
+
+                                    // Unget this character so that it may be processed later.
+                                    ungetwc(*c, p7);
+
+                                    // Set loop break flag.
+                                    *b = *NUMBER_1_INTEGER_MEMORY_MODEL;
+                                }
+
+                            } else if (*c == *((wint_t*) ESCAPE_CONTROL_UNICODE_CHARACTER_CODE_MODEL)) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console escape character: %i\n", p4);
+
+                                // Set escape character flag.
+                                *esc = *NUMBER_1_INTEGER_MEMORY_MODEL;
+
+                                // Copy source character to destination character array.
+                                append_wide_character_vector(p0, p1, p2, p4, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
+
+                            } else if (*c == WEOF) {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console WEOF: %i\n", p4);
+
+                                // Set loop break flag.
+                                *b = *NUMBER_1_INTEGER_MEMORY_MODEL;
+
+                            } else {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console standard character: %i\n", p4);
+
+                                // Copy source character to destination character array.
+                                append_wide_character_vector(p0, p1, p2, p4, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
+
+                                // Set loop break flag.
+                                *b = *NUMBER_1_INTEGER_MEMORY_MODEL;
+                            }
+
+                        } else {
+
+                    fwprintf(stdout, L"TEST read gnu/linux console CONVERSION ERROR: %ls\n", (wchar_t*) p4);
+
+                            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read from gnu/linux console. The conversion from multibyte- to wide character failed.");
+
+                            // Set loop break flag.
+                            *b = *NUMBER_1_INTEGER_MEMORY_MODEL;
+                        }
+
+                    } else {
+
+                        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console character. The loop break flag is null.");
+                    }
+
+                } else {
+
+                    log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console character. The input character is null.");
+                }
+
+            } else {
+
+                log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console character. The escape character mode is null.");
+            }
+
+        } else {
+
+            log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console character. The escape control sequence is null.");
+        }
+
+    } else {
+
+        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console character. The source input stream is null.");
+    }
+}
+
+/**
+ * Reads from gnu/linux console.
  *
  * @param p0 the destination wide character array (Hand over as reference!)
  * @param p1 the destination count
@@ -51,116 +227,25 @@
  */
 void read_gnu_linux_console(void* p0, void* p1, void* p2, void* p3) {
 
-    if (p3 != *NULL_POINTER_MEMORY_MODEL) {
+    log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Read gnu/linux console.");
 
-        FILE* s = (FILE*) p3;
+    // The loop break flag.
+    int b = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    // The input character.
+    wint_t c = *((wint_t*) NULL_CONTROL_UNICODE_CHARACTER_CODE_MODEL);
+    // The escape character mode.
+    int esc = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    // The escape control sequence mode.
+    int csi = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
-        log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Read from gnu/linux console.");
+    while (*NUMBER_1_INTEGER_MEMORY_MODEL) {
 
-        // The loop exit flag.
-        int f = *NUMBER_0_INTEGER_MEMORY_MODEL;
-        // The input character.
-        wint_t c = *((wint_t*) NULL_CONTROL_ASCII_CHARACTER_CODE_MODEL);
-//??        int c = *((int*) NULL_CONTROL_ASCII_CHARACTER_CODE_MODEL);
-        // The escape character mode.
-        int esc = *NUMBER_0_INTEGER_MEMORY_MODEL;
-        // The escape control sequence mode.
-        int csi = *NUMBER_0_INTEGER_MEMORY_MODEL;
+        if (b != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-        while (*NUMBER_1_INTEGER_MEMORY_MODEL) {
-
-            if (f == *NUMBER_1_INTEGER_MEMORY_MODEL) {
-
-                break;
-            }
-
-            // Read character from source input stream, i.e. gnu/linux console.
-            //
-            // CAUTION! For the narrow stream functions it is important to store the
-            // result of these functions in a variable of type int instead of char,
-            // even if one plans to use it only as a character. Storing EOF in a char
-            // variable truncates its value to the size of a character, so that it
-            // is no longer distinguishable from the valid character (char) -1.
-            // So, one should always use an int for the result of getc and friends,
-            // and check for EOF after the call; once it is verified that the result
-            // is NOT EOF, one can be sure that it will fit in a char variable
-            // without loss of information.
-            c = fgetwc(s);
-//??            c = fgetc(s);
-
-    fwprintf(stdout, L"TEST read gnu/linux console c: %c\n", c);
-
-            if (csi == *NUMBER_1_INTEGER_MEMORY_MODEL) {
-
-                // Reset escape control sequence flag.
-                csi = *NUMBER_0_INTEGER_MEMORY_MODEL;
-
-                // Copy source character to destination character array.
-                decode_utf_8_unicode_character_vector(p0, p1, p2, (void*) &c, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
-
-                // An escape character followed by a left square bracket character
-                // were read before. So this is an escape control sequence.
-                // Since all values have been read, the loop can be left now.
-                f = *NUMBER_1_INTEGER_MEMORY_MODEL;
-
-            } else if (esc == *NUMBER_1_INTEGER_MEMORY_MODEL) {
-
-                // Reset escape character flag.
-                esc = *NUMBER_0_INTEGER_MEMORY_MODEL;
-
-                // An escape character was read before.
-                // Find out if it was just that escape character,
-                // or if a left square bracket character follows now,
-                // in which case this is the start of an escape control sequence.
-
-                if (c == *((wint_t*) LEFT_SQUARE_BRACKET_UNICODE_CHARACTER_CODE_MODEL)) {
-
-                    // This is the start of an escape control sequence.
-
-                    // Set escape control sequence flag.
-                    csi = *NUMBER_1_INTEGER_MEMORY_MODEL;
-
-                    // Copy source character to destination character array.
-                    decode_utf_8_unicode_character_vector(p0, p1, p2, (void*) &c, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
-
-                } else {
-
-                    // This is NOT going to be an escape control sequence.
-                    // An escape- followed by another, second character has been detected.
-
-                    // Unget this character so that it may be processed later.
-                    ungetwc(c, s);
-
-                    // Set loop exit flag.
-                    f = *NUMBER_1_INTEGER_MEMORY_MODEL;
-                }
-
-            } else if (c == *((wint_t*) ESCAPE_CONTROL_UNICODE_CHARACTER_CODE_MODEL)) {
-
-                // Set escape character flag.
-                esc = *NUMBER_1_INTEGER_MEMORY_MODEL;
-
-                // Copy source character to destination character array.
-                decode_utf_8_unicode_character_vector(p0, p1, p2, (void*) &c, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
-
-            } else if (c == WEOF) {
-
-                // Set loop exit flag.
-                f = *NUMBER_1_INTEGER_MEMORY_MODEL;
-
-            } else {
-
-                // Copy source character to destination character array.
-                decode_utf_8_unicode_character_vector(p0, p1, p2, (void*) &c, (void*) PRIMITIVE_MEMORY_MODEL_COUNT);
-
-                // Set loop exit flag.
-                f = *NUMBER_1_INTEGER_MEMORY_MODEL;
-            }
+            break;
         }
 
-    } else {
-
-        log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not read gnu/linux console. The source input stream is null.");
+        read_gnu_linux_console_character(p0, p1, p2, (void*) &b, (void*) &c, (void*) &esc, (void*) &csi, p3);
     }
 }
 
